lab1/Test/L1-A-13-59.output
Error Type B at Line 5
Error Type A at Line 9
Error Type A at Line 11
Error Type B at Line 27
Error Type A at Line 30
Error Type B at Line 34
Error Type B at Line 37
Error Type A at Line 43
