lab1/Test/L1-A-13-59.cmm
float ;
struct a xiLsc [ 665427336 ] , uioFvAP 

;
struct ;
int ;
struct {
  struct hnvqZ Aty1rE ;
  int ^Ai_idBNmVW ;
  int btG0IfZsDore , d6HwcnL = UnQDwSIH9 ;
}`;
int mJO0G1ts17IIFY6yphrF ( ) {
}
int dJ_3OjusDvL6gLi 
;
int ;
int KceGR77I ( int ZRZ2LzgHT1za9 , int doyW ) {
  int F8cG3zIviyb7ummEO3 ;
  while ( fT17nrkCUJ3uFd1 )   return qg_OsNQs >= k3IKWxe7989IXopDah1Z 
    ( OhoW1q4 , JwllXbt9MWrEwt = Qi2jO8c || _Y6m_Y5kwud29 
    && KrnZK8UwdCOsUPl - dvyaQu0Y5oZ1q3fV7LYf * evqxMjOcPO33EIBDf3d 
    [ FAbvrG8aAkxvVGIm && MkSYj != l + W0d5r2N_3AhnJPn4Ikf 
    [ AZsKr8i1oQSHqjqXDQk && EsqBE19F84OYq4VfZ == Ih4EXTvyogOSMWx3 
    + H * GJ ( T7U1AnARlH || RlJgXnA6KY00g && qF > PdOtuic2b3eI 
    * o0bzKkqcr1BPXIDDU3ow ( DBYNOsmI3eImT8 || i1zZ < 
    ( ibkzwS0pz17UIdtb1E ) . _n ) <= 2131934914.411938928 
    . Tr4n ) ] * f4u_ta 1893064510 . KKsWMufjZ1guqbVZGbR 
    ] / - ! r0QjppfWIaTsYyTp ( ) ) ;

'}
struct hubu8eoX {
};
int JPcmHGvEON3X4 ( ) {
  Wh3FfV8JUapET ;= 
  a3NfW ;
  g5Od ;
  if G )   yxA0ibdHAn665uq6t4s ;
else   if ( HkIT7C )   UcG4WM1Tt1 ;


  mQNPa98pb ;
  sQ_o5WHetqG ;
  while ( Yz_GYH6pkQCJthsA64 )   qV2syrqtyp2 ;&

  if ( HWKXx )   if ( oNz3_greDBtWyO ) {
  }else   E9xc3kCHxM ;


}
